...
        android:layout_marginBottom="16dp"
        android:text="@string/invite_to_group"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/new_member_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
...
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/textPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/add_member_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addmembertext" />

    <ImageButton
        android:id="@+id/add_member_button"
...
