...
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".pages.FriendsPage">

    <!-- Back button -->
    <ImageButton
        android:id="@+id/friends_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
...
