...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".pages.JoinGroupPage">

    <ImageButton
        android:id="@+id/join_back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
...
